First Commit of alpha Version - just method2jscc generator included

--- a/src/html_src_libs_embed.html
+++ b/src/html_src_libs_embed.html
@@ -1,4 +1,5 @@
 <!-- HTML code for embedding the source libraries into docs/index_src_libs.html -->
 <script src='.././src/npm_header.js'></script>
 <script src='../src/libs/require_mods.js'></script>
-<script src='.././src/js2code.js'></script>
+<script src='../src/libs/method2jscc.js'></script>
+<script src='.././src/xml2code.js'></script>
